change some expressions

--- a/_smewin/docs/cs/ics_riscv/PA/PA0_1.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA0_1.md
@@ -21,7 +21,9 @@
 
 这里并不是在批评或赞扬某一类完成度的同学，而是想说，由于《计算机系统基础》课程的必修属性，挂科需要不断重修，其代价是较大的，如果目前自身情况确实不能保证自己能通过课程，不妨缓修，以免影响总绩点。
 
-如果你已经决定选择这门课，笔者十分欢迎，并将在文档中尽可能给予你帮助，加油。
+这门课程的实验确实**比较困难**，如果没有足够好的编程基础和计算系统知识，即使是高年级同学甚至研究生也会遇到很大的困难。但是坚持完成实验的收益也是很大的，在这个实验中，你能够接触 Linux ，了解到很多计算机系统的知识，并手动实现一些功能和机制。这也是个人直接参与管理一个中等大小项目（大概几千行）的机会，是一次宝贵的练习。
+
+如果你已经决定选择这门课，笔者十分欢迎，我会以文档的方式与你一起前行，加油。
 
 ## 信息框
 
