finish PA0_4 in ICS RISCV, a little change in PA0_3

--- a/_smewin/docs/cs/ics_riscv/PA/PA0_3.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA0_3.md
@@ -3,6 +3,8 @@
 # 关于 Vim
 
 !!! abstract "摘要"
+    本篇会介绍 Vim 的一些基本用法，并对后续实验中选择编辑器的问题进行了一些初步讨论。
+
     本篇对应实验文档中“ Configuring vim ”的部分，建议和原实验文档一同阅读，可以互为补充参考。
 
 ---
@@ -50,3 +52,7 @@ Vim 有丰富而强大的功能，可以在命令行中得到很好的运用。
     所以或许，我们需要的是让自己拥有在不同的环境下都能够进行开发的能力，根据具体需求情境选择效率最高的工具，这样才能适应未知的或不断变化的外部环境。
 
 
+!!! success "初识 Vim"
+    你已经初步了解了 Vim 的一些基本用法。
+
+    Vim 和 Linux 一样，都是需要不断学习才能逐渐掌握的工具，大家在后续的实验中，可以尝试根据开发需求，不断探索 Vim 和 Linux 的使用方法，在掌握了足够多的使用技巧后，才更可能体会到其方便之处。
