--- a/_smewin/docs/cs/ics_riscv/PA/PA0_4.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA0_4.md
@@ -21,7 +21,7 @@ $ xxx
 xxx: command not found
 ```
 
-即使你看不懂他在讲什么，你也知道， AI 肯定看得懂，你把这段信息复制给它，它就会教你怎么解决这个问题。
+即使你看不懂他在讲什么，你也知道， AI 大概率是看得懂的，你把这段信息复制给它，它就会教你怎么解决这个问题。
 
 这个技巧也可以推广，比如，当你在配置 CMake 时，你偶尔可能遇到这样的报错：
 
@@ -68,7 +68,7 @@ for (int i = 0; i < 10; i++){
 
 板板正正的卷子和题目大家见得多了，我们玩个小游戏，如果我们把这道题目变成下面的样子放在考场上，你觉得多少高中生能答对？
 
-![2024九省联考数学第19题后半（问题）部分](../pic/PA/math_latter_half.png)
+![2024九省联考数学第19题后半（问题）部分，前半部分被遮盖](../pic/PA/math_latter_half.png)
 
 答案显然，作对的人数无限逼近于 0% 。注意，这道题的题干并没有给出任何的条件，也就是说去掉题干不影响题目的正确性，所以我们只是去掉了一些与题目并非强相关的**知识**内容，如果是一个做密码学的同学来做这道题，那他自然不会感到太大的障碍，因为他在**知识**层面有这些背景内容的记忆。但是，问题在于，这道题目**面对的人**是高中生而不是密码学研究者，对一个高中生的要求里并不包括拥有密码学背景知识，所以题干必须给出这道题中不在高中范围内的密码学知识，不然这道题目就不能达成考察和区分的目的。
 
@@ -78,7 +78,7 @@ for (int i = 0; i < 10; i++){
 
 还有一些小彩蛋，想象一个情境，我们在日常中拿到了这样的一道题：
 
-![2024九省联考数学第19题后半（问题）部分](../pic/PA/math_latter_half.png)
+![2024九省联考数学第19题后半（问题）部分，前半部分被遮盖](../pic/PA/math_latter_half.png)
 
 于是我们询问 AI ：
 
@@ -92,7 +92,7 @@ AI 会怎么回答？你觉得呢？
 
 ![2024九省联考数学第19题翻转](../pic/PA/math_reversed.png)
 
-而几年来我们一直把题目做反了。
+上面是原题干，下面是出题老师所补充的，让高中生能够做出题目而准备的信息，他们是有这样的前后关系的，而几年来我们一直把题目做反了。
 
 总而言之，如何使用 AI ，或许早在高中时期就是一个伏笔，现在是检验大家学习成效的时候了。
 
@@ -139,9 +139,11 @@ cat **/*.c **/*.h > all_files.txt
 
 ??? info "一个参考答案"
     利用管道机制，把所有.c 和.h 文件的内容合并到一个文件中，并将其输出到剪贴板：
+    
     ```shell
     cat **/*.c **/*.h | xclip -selection clipboard
     ```
+
     执行完之后，你就会发现可以直接粘贴所有文件的内容了。
     
 现在我们还面临一个问题， AI 可能并不知道我们这些文件是怎么组织的，分成哪些模块，它可能在风马牛不相干的模块中修改了一点代码，导致程序不能正常运行。
@@ -153,14 +155,18 @@ cat **/*.c **/*.h > all_files.txt
     tree
     ```
 
-把这些内容复制给 AI ，想必就能得到更好的答案了。
+把文件架构的内容也复制给 AI ，想必就能得到更好的答案了。
 
 但是，虽然我们有了项目架构，文件内容和提供的文件架构之间对应不上，也就是说 AI 并不知道你的项目下的每一个文件对应什么内容，这又该怎么办？
 
 所以，你知道自己应该养成这样一个习惯，在每个代码文件的开头用注释写上这个文件的路径和名称，这样就能够建立起架构到内容的对应关系了。
 
-我们应该建立起这样的习惯，就是每当自己有一个需求，就需要根据需求分析解决方法，由此得到自己应当做什么来解决这个需求，相信这个理念会在未来的道路上一直帮助到大家。
+综上，我们应该建立起这样的理念，就是每当自己有一个需求，就需要根据需求来分析解决方法，由此得到自己应当做什么来解决这个需求，相信这个理念会在未来的道路上一直帮助到大家。
 
 ---
 
-能够跟到这里，笔者也该跟你说一句辛苦了，我该感谢你对我撰写的文档质量的信任，虽然限于篇幅，不可能在使用 AI 的方法上面面俱到，如果你有更多使用 AI 的独门秘诀，也欢迎与我分享。
+能够跟到这里，笔者也该跟你说一句辛苦了，我该感谢你对我撰写的文档质量的信任，虽然限于篇幅，不可能在使用 AI 的方法上面面俱到，如果你有更多使用 AI 的独门秘诀，也欢迎与我偷偷分享。(doge)
+
+
+!!! success "你已完成 PA 的所有准备工作"
+    你已经学会了与 AI 交互的基础操作，相信在后续实验开始之后，你的 PA 之旅会更加一帆风顺。
