add content in PA0_4 ICS RISCV

--- a/_smewin/docs/cs/ics_riscv/PA/PA0_4.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA0_4.md
@@ -35,6 +35,7 @@ CMake Error at CMakeLists.txt:1 (project):
 ```plaintext
 我的 CMakeLists.txt 使用时出现了报错，以下是我的 CMakeLists.txt 和报错信息，请帮我修改，直接给我生成一个新的 CMakeLists.txt 文件。
 ```
+
 然后你要做的就是复制粘贴了。
 
 继续推广这个技巧，当我们在自己写程序时，也可以借鉴这种思路，在程序中输出足够多的 log 信息，这样 AI 就可以帮我们分析错误原因。比如
@@ -94,6 +95,11 @@ AI 会怎么回答？你觉得呢？
 
 上面是原题干，下面是出题老师所补充的，让高中生能够做出题目而准备的信息，他们是有这样的前后关系的，而几年来我们一直把题目做反了。
 
+!!! question "我现在知道了需要提供哪些信息了，那具体我该如何提问？"
+    怎么问怎么答，问几点答几点，这是大家做那么久语文题一直接触的准则。题目让分析修辞就说用了什么修辞，让结合原文就引用原文某某片段，要结合生活实际就说自己遇到过什么什么事。
+
+    限于篇幅，就不详细解释了，不过对身经百战的你来说应该也不难。其实也就只是反过来，从答题者变成出题者而已。
+
 总而言之，如何使用 AI ，或许早在高中时期就是一个伏笔，现在是检验大家学习成效的时候了。
 
 ## 旅行伙伴加入！
@@ -151,6 +157,7 @@ cat **/*.c **/*.h > all_files.txt
 所以，我们还需要提供给 AI 我们的项目架构。这又该怎么办呢？（这难道还用我说嘛）
 
 ??? info "一个参考答案"
+    同样可以通过命令行工具来获取项目架构：
     ```shell
     tree
     ```
@@ -160,6 +167,13 @@ cat **/*.c **/*.h > all_files.txt
 但是，虽然我们有了项目架构，文件内容和提供的文件架构之间对应不上，也就是说 AI 并不知道你的项目下的每一个文件对应什么内容，这又该怎么办？
 
 所以，你知道自己应该养成这样一个习惯，在每个代码文件的开头用注释写上这个文件的路径和名称，这样就能够建立起架构到内容的对应关系了。
+
+!!! note "思路总结"
+    我们先分析了 AI 需要哪些补充信息，然后得知了需要实验文档，再通过命令行工具快速整合了项目代码。再经分析发现还需要项目结构，于是我们询问 AI ，得知了可以通过新的命令行工具来获取项目结构。我们获得了新的命令行伙伴。
+
+    然后，为了建立文件到代码的一一对应关系，我们得出了“应当养成在代码文件头部写出当前代码所属的文件名的习惯”的结论。
+
+    通过不断分析，不断研究，我们逐渐形成了自己的解决问题的思路，并最终得出了自己的解决方案。
 
 综上，我们应该建立起这样的理念，就是每当自己有一个需求，就需要根据需求来分析解决方法，由此得到自己应当做什么来解决这个需求，相信这个理念会在未来的道路上一直帮助到大家。
 
