add <del> instead of ~~ in ICS RISCV PA0_3

--- a/_smewin/docs/cs/ics_riscv/PA/PA0_3.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA0_3.md
@@ -47,7 +47,7 @@ Vim 有丰富而强大的功能，可以在命令行中得到很好的运用。
 
     同样的，反过来也是，如果你使用 VSCode ，你又该如何实现像 Vim 中一样快捷的命令行编辑？ VSCode 光是启动就可以等让你好几秒喝杯茶了，更不用说进行复杂的命令和操作。
 
-    其实这不仅是编辑器层面的问题，就像你刚获得的 Linux 系统一样，你也会觉得 Windows 系统的图形界面也有其优点。 Windows 更用户友好的界面，也吸引着更多的人去做相关的开发，建立更丰富的应用生态； Linux 则更方便命令行老手进行开发，~~虽然等你做完 PA 的时候估计恨不得把 Linux 直接卸载掉，但~~用久了之后你就会发现开发这方面还是 Linux 好用。
+    其实这不仅是编辑器层面的问题，就像你刚获得的 Linux 系统一样，你也会觉得 Windows 系统的图形界面也有其优点。 Windows 更用户友好的界面，也吸引着更多的人去做相关的开发，建立更丰富的应用生态； Linux 则更方便命令行老手进行开发，<del>虽然等你做完 PA 的时候估计恨不得把 Linux 直接卸载掉，但</del>用久了之后你就会发现开发这方面还是 Linux 好用。
     
     所以或许，我们需要的是让自己拥有在不同的环境下都能够进行开发的能力，根据具体需求情境选择效率最高的工具，这样才能适应未知的或不断变化的外部环境。
 
