add content in ICS RISCV PA0_4

--- a/_smewin/docs/cs/ics_riscv/PA/PA0_4.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA0_4.md
@@ -3,10 +3,14 @@
 # 与 AI 交互
 
 !!! abstract "摘要"
-    本篇与实验文档中“ Getting Source Code for PAs ”的部分有部分对照，但无直接绑定关系。
+    本篇主要讲解 AI 的简易使用技巧，与实验文档中的“ Getting Source Code for PAs ”有部分对照，但无直接绑定关系。
 
 
 ---
+
+!!! quote ""
+    在 AI 时代，知识是最不值钱的东西。
+
 
 在[编写宗旨](../guidelines/index.md)中我们提到过， PA 是在 2014 年开发完成的，而在现在的 202x 年代，我们获得了一个强劲的 AI 助手，它可以帮助我们摆脱过去必须读大量手册、搜索社区才能解决一点点小需求的问题。
 
@@ -93,7 +97,7 @@ AI 会怎么回答？你觉得呢？
 
 ![2024九省联考数学第19题翻转](../pic/PA/math_reversed.png)
 
-上面是原题干，下面是出题老师所补充的，让高中生能够做出题目而准备的信息，他们是有这样的前后关系的，而几年来我们一直把题目做反了。
+上面是原题干，下面是出题老师所补充的，让高中生能够做出题目而准备的信息，他们是有这样的前后关系的，而如果我们只会做题，那永远只能把题目做反了。
 
 !!! question "我现在知道了需要提供哪些信息了，那具体我该如何提问？"
     怎么问怎么答，问几点答几点，这是大家做那么久语文题一直接触的准则。题目让分析修辞就说用了什么修辞，让结合原文就引用原文某某片段，要结合生活实际就说自己遇到过什么什么事。
@@ -184,3 +188,7 @@ cat **/*.c **/*.h > all_files.txt
 
 !!! success "你已完成 PA 的所有准备工作"
     你已经学会了与 AI 交互的基础操作，相信在后续实验开始之后，你的 PA 之旅会更加一帆风顺。
+
+!!! question "遐想"
+    十年前没有 AI ，没有往年代码的同学，是怎么完成 PA 的呢？
+
