add <del> in ICS RISCV PA0_3

--- a/_smewin/docs/cs/ics_riscv/PA/PA0_3.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA0_3.md
@@ -27,7 +27,7 @@ Vim 有丰富而强大的功能，可以在命令行中得到很好的运用。
 
 然后你就可以输入 `/hello` ，不断按 N/n 来上下翻动，寻找整个输入中的 hello 字符串。
 
-可以想象，如果你想把一个程序的输出复制到记事簿或者 VSCode 之类的编辑器中，再做这些操作，需要花掉比在命令行中使用 Vim 多多少的时间。这些时间足以把代码扔给 AI 让他~~直接给你生成代码答案~~深度思考帮你解释文档中的疑难点了。
+可以想象，如果你想把一个程序的输出复制到记事簿或者 VSCode 之类的编辑器中，再做这些操作，需要花掉比在命令行中使用 Vim 多多少的时间。这些时间足以把代码扔给 AI 让他<del>直接给你生成代码答案</del>深度思考帮你解释文档中的疑难点了。
 
 
 ## 使用 Vim 还是 VSCode ？
