add content in ICS RISCV PA0_4

--- a/_smewin/docs/cs/ics_riscv/PA/PA0_4.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA0_4.md
@@ -140,7 +140,7 @@ cat **/*.c **/*.h > all_files.txt
 
 把所有的文件内容存储在一个文件中，这样 AI 就可以直接读取这个文件了。
 
-当然，偶尔我们不想多管理一个文件，只是想把一个程序的输出复制到剪贴板里去，那该怎么办呢？
+当然，偶尔我们不想多管理一个文件，只是想把一个程序的输出复制到剪贴板里去，但直接输出到终端复制粘贴又太麻烦，那该怎么办呢？
 
 !!! tip "Linux 理念"
     当你有某种需求时，大概率就有一个工具可以解决它。
