--- a/_smewin/docs/cs/ics_riscv/PA/PA0_4.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA0_4.md
@@ -183,6 +183,23 @@ cat **/*.c **/*.h > all_files.txt
 
 ---
 
+以下是一些思考题。
+
+!!! question " STFW RTFM RTFSC ？"
+    使用了一段时间 AI 后，大家认为上面这三个词还有必要存在吗？还是说其依然有存在的价值？这个问题很适合大家在做 PA 的过程中不断思考，感受时代变化带来的，学习模式的变化。
+
+!!! question "信息"
+    我们与 AI 交互的媒介是文字，但我们脑内的思想本身不是寥寥几个文字能准确表达的，从思想到文字，再从文字到 AI 的接收，其中损失了不少的信息。
+
+    AI 也不知道我们掌握每个知识的程度，不知道我们的身份是什么，过去是怎么样的学习模式，适合怎样的讲解方式。这些是我们自己心知肚明，而 AI 只能根据输入的那点信息来猜测的。
+
+    或许，未来我们可以通过更丰富的方式，如声音、视频甚至脑机接口来与 AI 交互，从而让 AI 更好地了解我们的想法，给出更令人满意的回答。
+
+    这也让我们反思，如何实现人与人之间更高效的沟通，避免信息损失导致的误解。
+
+
+---
+
 能够跟到这里，笔者也该跟你说一句辛苦了，我该感谢你对我撰写的文档质量的信任，虽然限于篇幅，不可能在使用 AI 的方法上面面俱到，如果你有更多使用 AI 的独门秘诀，也欢迎与我偷偷分享。(doge)
 
 
