add some content in PA1_3 & some fix in other files

--- a/_smewin/docs/cs/ics_riscv/PA/PA1_2.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA1_2.md
@@ -44,3 +44,7 @@
 
     不过我们也不必沮丧，虽然我们无法实现一个万能的自动 debug 机器，但我们依然可以通过排查出及其明显的错误状态（通过 `assert`），跟踪关键变量的值等方式，实现尽可能精确快速的 debug 。
 
+---
+
+!!! question "人是状态机吗？"
+    人脑是由大量神经元的状态组成的，那人是状态机吗？换而言之，人的行为是确定可预知的吗？更进一步，人的意识是完全自主的吗？
