add content of PA1_5, fix some expression mistake

--- a/_smewin/docs/cs/ics_riscv/PA/PA1_2.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA1_2.md
@@ -15,9 +15,9 @@
 
 计算机的工作原理无非是：在时钟的驱动下，执行“取指令→解析指令→执行指令”的循环。而其中每一个阶段的进行，都是有逻辑完整严密的电路支持的。
 
-我们学过，电路的本质其实就是电压的高低，我们将其对应到数学中的1和0，那也就是说，计算机可以拆分成两个部分：一部分是负责存储的01串，主要位于存储器中；另一部分是负责控制的01串，主要位于控制器中。（其他的部分更多是这两部分兼有）
+我们学过，计算机数字电路的本质其实就是一个个元件中电压的高低，我们将其对应到数学中的1和0，那也就是说，计算机可以拆分成两个部分：一部分是**负责存储的01串**，主要位于存储器中；另一部分是**负责控制的01串**，主要位于控制器中。（其他的部件更多是这两部分兼有）
 
-所以我们可以抽象计算机为**一个函数**`f(x)`，函数的输入是旧的存储部分，输出是下一个时钟的存储部分，函数本身是控制部分。那也就是说，对于一个确定的存储，确定的控制，下一周期的的计算机状态就是确定的（因为指令是存储在存储器中的，所以）
+所以我们可以抽象计算机为**一个函数**`f(x)`，函数的输入是旧的存储部分，输出是下一个时钟的存储部分，函数本身是控制部分。那也就是说，对于一个确定的存储，确定的控制，下一周期的的计算机状态就是确定的
 
 更进一步，由于控制部分是通过指令驱动的，而指令是存储在存储器中的，那么某种程度上，上面的函数`f`也可以视作存储的一部分（但不完全一样），所以我们还可以进一步抽象计算机为一个新函数`g(f, x)`，其中函数`g`就可以理解成 ISA ，也就是计算机工作方式的约定。
 
@@ -26,7 +26,7 @@
 !!! question "输入输出的地位？"
     我们讲了这么多计算机内部的抽象，但似乎没有抽象过外部的输入输出设备，我们该怎么理解输入输出设备在这些视角中的地位呢？
 
-在了解了这些抽象视角后，实验手册中所说的状态机视角对你而言可能就不难理解了。每个时刻的计算机都对应函数`g(f, x)`中的参数 `f` 和 `x`，即当前指令（和PC有关）和存储情况（即寄存器、内存等）。我们将每个时刻成为一个**状态**，那么每过一条指令，就应当进入下一个确定的状态，因为每个指令的行为都是 ISA 确定了的。
+在了解了这些抽象视角后，实验手册中所说的状态机视角对你而言可能就不难理解了。每个时刻的计算机都对应函数`g(f, x)`中的参数 `f` 和 `x`，即当前指令（和PC有关）和存储情况（即寄存器、内存等）。我们将每个时刻称为一个**状态**，那么每过一条指令，就应当进入下一个确定的状态，因为每个指令的行为都是 ISA 确定了的。
 
 
 ## 状态机的本质与 debug
