fix small mistake & build

--- a/_smewin/docs/cs/ics_riscv/PA/PA1_3.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA1_3.md
@@ -285,7 +285,7 @@ static int cmd_c(char *args) {
 !!! tip "看看函数定义"
     去源码里寻找一下， `cpu_exec()` 这个函数的原始定义是什么样的，结合你在《计算机系统基础》（《计算机组织结构》）课上学过的数据编码相关的知识，你应该就能理解了。
 
-    如果你能这个 -1 的含义，后面的任务对你来说也就只是时间问题了。
+    如果你能理解这个 -1 的含义，后面的任务对你来说也就只是时间问题了。
 
 ---
 
@@ -296,6 +296,6 @@ static int cmd_c(char *args) {
 !!! success "开始 PA 的第一关吧"
     接下来请你完成 PA1.1 中的任务，完成之后，就可以继续后面的部分了。
 
-    相信自己，即使你可能读完手册一遍下来什么都不懂，你要做的也只是多读两遍手册和代码，慢慢理解，相信自己，只是时间问题。
+    相信自己，即使你可能读完手册一遍下来什么都不懂，你要做的也只是多读两遍手册和代码，慢慢理解，相信自己，**不要慌张**，一切都只是时间问题。
 
 祝你好运！（爱来自 copilot 自动补全）
