fix some expression

--- a/_smewin/docs/cs/ics_riscv/PA/PA1_3.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA1_3.md
@@ -73,6 +73,9 @@
 
 所以，这里面 `#ifndef` 宏的作用就是防止头文件的重复展开导致编译错误。
 
+!!! tip "另一种头文件保护方式"
+    目前还有一种防止头文件重复定义的方式是在头文件里加上一行 `#pragma once` ，可以尝试搜索和思考两种方式的优缺点。
+
 ### Log
 
 继续在 `include/debug.h` 文件中，看到 `Log` 宏，里面可以看到 `__FILE__` `__LINE__` `__func__` 这些宏，它们代表什么应该很清晰。
@@ -180,7 +183,7 @@ typedef struct {
 extern NEMUState nemu_state;
 ```
 
-这里可以看到对 `NEMUState` 结构体的声明，其中有三个成员变量。第一个是一个整数 `state` ，会用来存储上面的枚举类型中的一个，用来代表当前 nemu 的状态（比如 `NEMU_RUNNING` 表示正在执行用户程序， `NEMU_STOP` 表示程序暂停执行等），用来控制 nemu 的行为。第二个是虚拟地址类型的 `halt_pc` ，其中会存储 nemu 在停止执行用户程序时所在的 PC 值（这个变量目前还用不到，在 PA2 中会详细展开）。第三个是一个无符号整数 `halt_ret` ，这个表示 nemu 的用户程序的返回值（我们都知道， main() 函数返回非零值时表示异常退出）。
+这里可以看到对 `NEMUState` 结构体的声明，其中有三个成员变量。第一个是一个整数 `state` ，会用来存储上面的枚举类型中的一个，用来代表当前 nemu 的状态（比如 `NEMU_RUNNING` 表示正在执行用户程序， `NEMU_STOP` 表示程序暂停执行等），用来控制 nemu 的行为。第二个是虚拟地址类型的 `halt_pc` ，其中会存储 nemu 在停止执行用户程序时所在的 PC 值（这个变量目前还用不到，在 PA2 中会详细展开）。第三个是一个无符号整数 `halt_ret` ，这个表示 nemu 的用户程序的返回值（我们都知道， `main()` 函数返回非零值时表示异常退出）。
 
 在这里干讲你肯定不好理解，我们来寻找一个实例。
 
@@ -211,7 +214,7 @@ int main(int argc, char *argv[]) {
 }
 ```
 
-没想到我们一跳转，直接跳转到整个 nemu 的 main() 函数来了！那这个函数肯定是在指示 nemu 自身的退出状态，而不是用户程序的退出状态。
+没想到我们一跳转，直接跳转到整个 nemu 的 `main()` 函数来了！那这个函数肯定是在指示 nemu 自身的退出状态，而不是用户程序的退出状态。
 
 
 那我们现在可以回到 `is_exit_status_bad()` 了，从这个函数中我们可以获取如下的信息：
@@ -250,7 +253,7 @@ static void exec_once(Decode *s, vaddr_t pc) {
 
 这里把一个 `Decode` 结构体指针 `s` 的各个参数初始化成地址 `pc` ，然后 `s` 带着装入的值，进入到具体的 ISA 指令集中去执行指令了。执行完后， `cpu.pc` 被更新。
 
-所以， `Decode` 结构体实际上就是一个对执行程序的抽象，它包含了执行一条机器指令所需的最小程度的信息，从而在 nemu 中填写好，然后交给具体的 ISA 指令集去执行，实现了 nemu 和 ISA 之间的解耦，使得 nemu 只需准备必须的信息，而无需知道它装载的具体是什么样的指令集，我们将会在 PA2 和这个结构体打很多交道。
+所以， `Decode` 结构体实际上就是一个对执行程序的抽象，它包含了执行一条机器指令所需的最小程度的信息。它在 nemu 中被填写好，然后交给具体的 ISA 指令集去执行，从而实现了 nemu 和 ISA 之间的解耦。这使得 nemu 只需准备必须的信息，而无需知道它装载的具体是什么样的指令集，我们将会在 PA2 和这个结构体打很多交道。
 
 ## gdb 式的框架
 
@@ -291,7 +294,7 @@ static int cmd_c(char *args) {
 
 ## 总结
 
-前面说了这么多，或许你全部理解了，或许你很多都没懂，但你肯定已经对 nemu 的代码有了一个大概的了解，完成 RTFSC 一节的必做内容肯定是不成问题了，但在完成下一节“基础设施”的时候，多少还是会遇到一些困难，但那些困难都只是实现上的困难，而不是原理上的困难。只要你在阅读文档和源码的过程中好好思考了 nemu 的执行逻辑（或者只是简单的模仿），实现就只是时间问题，甚至如果你像我们前面[与 AI 交互](./PA0_4.md)中介绍的那样充分发挥 AI 的力量，实现所需的时间也可以极大缩短。（不过，出于锻炼你代码能力的考虑，还是建议至少核心逻辑应当由你自己实现，在一些繁杂耗时的细节上，使用 AI 是可以理解的）
+前面说了这么多，或许你全部理解了，或许你很多都没懂，但你肯定已经对 nemu 的代码有了一个大概的了解，完成 RTFSC 一节的必做内容肯定是不成问题了，但在完成下一节“基础设施”的时候，多少还是会遇到一些困难，但那些困难都只是实现上的困难，而不是原理上的困难。只要你在阅读文档和源码的过程中好好思考了 nemu 的执行逻辑（甚至只是简单的模仿），实现就只是时间问题，甚至如果你像我们前面[与 AI 交互](./PA0_4.md)中介绍的那样充分发挥 AI 的力量，实现所需的时间也可以极大缩短。（不过，出于锻炼你代码能力的考虑，还是建议至少核心逻辑应当由你自己实现，在一些繁杂耗时的细节上，使用 AI 是可以理解的）
 
 !!! success "开始 PA 的第一关吧"
     接下来请你完成 PA1.1 中的任务，完成之后，就可以继续后面的部分了。
