--- a/_smewin/docs/cs/ics_riscv/PA/PA1_4.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA1_4.md
@@ -167,7 +167,7 @@ This is a big apple.
 
     你并不需要生成一个完美的实现，一些小的 bug 是可以被允许的，我们后面会提到测试存在的局限性，你只需要得到一个能够进行基本的判断比对结果的程序即可。
 
-    我们提供了一个[参考实现](../files/test-expr.py)，你可以先玩一玩，然后尝试自己让 AI 写一个，并检查这两个实现有什么不同。
+    我们提供了一个[参考实现](../files/test-expr.py)，你可以先玩一玩，然后尝试自己让 AI 写一个，并检查这两个实现有什么不同。（注意，参考实现为了方便，从 nemu 的输出中寻找结果时是寻找“Result = 0x...”开头的行，使用这个脚本时请务必注意这一点，调整好自己的 nemu 实现的输出格式）
 
 !!! note "程序设计的意义"
     各位有没有问过自己一个问题：我们为什么设计程序？
@@ -185,7 +185,7 @@ This is a big apple.
 
 如果你已经尝试使用了我们提供的参考实现，并且找出了一些表达式求值的 bug ，那么能帮到你我感到很开心，但是再往后你就会发现一些问题：即使你的表达式求值已经通过了 OJ 上的所有测试，但是对于有些输入，总是会在测试程序里显示错误。
 
-这是因为我们在表达式求值的过程中，全部都在用 unsigned 类型运算，而 python ，包括 C 语言中在进行相应数的表达式求值时，会默认将这些常量按照 int 类型处理，导致一旦出现溢出之类的情况，最后得到的结果可能是和 unsigned 运算不同的。
+这是因为我们在表达式求值的过程中，全部都在用 unsigned 类型运算，而 python ，包括 C 语言中在进行相应数的表达式求值时，会默认将这些常量按照 int 类型处理，导致一旦出现负数乘除法之类的情况，最后得到的结果可能是和 unsigned 运算不同的。
 
 C 语言对值的默认处理应该会让你回想起《计算机系统基础》课上的这张 PPT 。
 
