--- a/_smewin/docs/cs/ics_riscv/PA/PA1_5.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA1_5.md
@@ -14,13 +14,13 @@
 但偶尔，也会出现一些比较尴尬的情况……比如：
 
 ```shell
-$ $ maek
+$ maek
 command not found: maek
 ```
 
 尤其是在一长串命令中，不小心手快了打错了一个字母，然后命令行突然沉默了一会，告诉你命令有错，这个时候错就有得好找了。
 
-!!! tip "注意"
+!!! note "注意"
     我们出现了一个需求：需要在输入命令有一两个小的字符错误时，能够自动纠正过来。
 
 我们的运气不错，确实存在一个这样的软件，能够帮助我们自动纠错命令。
@@ -31,7 +31,7 @@ command not found: maek
 
 ```shell
 $ maek
-fuck: command not found
+maek: command not found
 $ fuck
 make [enter/↑/↓/ctrl+c]
 $
@@ -48,7 +48,7 @@ $
 
 我们在完成 PA 时，实际上用得最多的指令就是 `make xxx`，而且往往会反复使用，比如在实现了一个新功能时，我们肯定会在接下来的几分钟里多次使用 `make run` ，如果每次都要从头开始敲，是很无聊，也很浪费时间的。
 
-!!! tip "利用命令的“局部性”"
+!!! note "利用命令的“局部性”"
     我们又出现了一个新需求：能够利用命令的“局部性”，将重复性的命令输入自动化。
 
 好在，我们真的有一个工具可以帮我们实现这个功能：`fish`。
@@ -94,9 +94,9 @@ fish 会记录你输入过的命令，并且根据你当前输入的内容，提
 grep -E '^\s*export\s+(NEMU_HOME|AM_HOME)=' ~/.bashrc | sed 's/export/set -x/; s/=/ /' >> ~/.config/fish/config.fish
 ```
 
-所以，对于一个研究计算机的人来说，偷懒是真谛（误）。
+所以，对于一个研究计算机的人来说，偷懒是生产力发展的第一动力（误）。
 
-但注意，这只是个简易的命令，使用一次就好，不要多次使用。如果使用后还是不能正常 make ，建议重启试试。同样，如果你后面使用了 navy-apps ，就回来再使用一次下面这个命令：
+但注意，这只是个简易的命令，将配置追加到 fish 的配置文件中，所以使用一次就好，不要多次使用，不然 fish 的配置文件末尾会被追加一堆内容。如果使用后还是不能正常 make ，建议重启试试。同样，如果你后面使用了 navy-apps ，就回来再使用一次下面这个命令：
 
 ```shell
 grep -E '^\s*export\s+(NAVY_HOME)=' ~/.bashrc | sed 's/export/set -x/; s/=/ /' >> ~/.config/fish/config.fish
@@ -106,6 +106,11 @@ grep -E '^\s*export\s+(NAVY_HOME)=' ~/.bashrc | sed 's/export/set -x/; s/=/ /' >
 
 
 ---
+
+!!! note "总结"
+    正如我们前面的文档中有说到过的，计算机领域的一个典型思路是“出现某一个需求→找到合适的工具→解决该需求”，因为这个世界上有很多人也在进行开发，所以绝大部分情况下，我们都不需要自己写一个工具，而是可以借用别人写好了的现成的工具。
+
+    以及，像我们上一篇文档中所说，程序设计的意义就是自动化，让技术解放人的重复劳动，不然，计算机就没有应用的意义了。
 
 !!! success "PA1 到此结束"
     收拾收拾，准备前往 PA2 吧。
