add PA_plus1 & basic structure of PA2

--- a/_smewin/docs/cs/ics_riscv/PA/PA1_5.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA1_5.md
@@ -9,7 +9,7 @@
 
 ## 我们的命令行
 
-在 PA1 的过程中，想必大家已经开始逐渐熟悉命令行的使用了，我们在日常使用得比较多的几个命令，比如 `git` `make` 等，应该已经用过几十次了。
+在 PA1 的过程中，想必大家已经开始逐渐熟悉命令行的使用了，我们在实验中用得比较多的几个命令，比如 `git` `make` 等，应该已经用过几十次了。
 
 但偶尔，也会出现一些比较尴尬的情况……比如：
 
