--- a/_smewin/docs/cs/ics_riscv/PA/PA2_1.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA2_1.md
@@ -7,7 +7,7 @@
 
     作者最近太忙了，所以正在绝赞咕咕中……请各位谅解。
 
-在 PA2 中，我们（打算）会让文档变得不再那么详细，一是在[ PA1 的 nemu 代码导读](PA1_3.md)一章中已经对 PA2.1 相关的框架也有了一个较为详细的解释，二是， PA2 的内容比较杂，这部分能不能做得好，涉及很多方面的知识，限于作者水平，不是写一两篇文档就能解决的问题。
+在 PA2 中，我们（打算）会让文档变得不再那么详细，一是在[ PA1 的 nemu 代码导读](PA1_3.md)一章中已经对 PA2.1 相关的框架也有了一个较为详细的解释；二是， PA2 的内容比较杂，这部分能不能做得好，涉及很多方面的知识，限于作者水平，不是写一两篇文档就能解决的问题。
 
 ---
 
