add todo for ICS RISCV

--- a/_smewin/docs/cs/ics_riscv/PA/PA1_3.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA1_3.md
@@ -67,6 +67,7 @@
 
 但是，为什么要在 `#ifndef` 后紧跟对这个宏本身的定义呢？
 
+<!-- TODO: 修改这里的描述，改成一个全局变量被定义（不是声明）两次，以及 static 变量导致的出现多份副本，这个例子又抽象又不好复现，甚至这里写的就是错的 -->
 我们想象一下一个情况，在一个 `struct.h` 文件中存在一个结构体的类型名称定义，这个头文件被两个不同的 .c 文件所 include ，然后我们生成可执行文件时，需要将这两个 .c 文件合到一起去。众所周知， `#include` 宏就是直接把一个文件中的内容原封不动地搬到 `#include` 所在的地方，这个宏在预处理时就原原本本地把两个 .c 文件中都展开了同一份 struct 的定义，然后你就出现了对一个类型重复定义的错误，文件无法编译通过。
 
 但如果你加上这个 `#ifndef __STRUCT_H__` 系列宏，在预处理时，在第一个 .c 文件中对 `#include <struct.h>` 展开时， `__STRUCT_H__` 暂未被定义，所以中间的内容会正常展开，实现对 `__STRUCT_H__` 和 `struct` 的定义。而在第二个 .c 文件中继续展开时，因为 `__STRUCT_H__` 已经被定义，头文件里面的所有内容都被删去，我们就成功编译通过了。
