fix some expressions

--- a/_smewin/docs/cs/ics_riscv/PA/PA1_3.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA1_3.md
@@ -123,7 +123,7 @@ typedef struct {
 } x86_CPU_state;
 ```
 
-对比后可以看到， riscv 里面的 `MUXDEF` 宏，最后会展开成类似 `riscv32_CPU_state` 的形式。
+经过这么一比较，我们就可以合理类比推测， riscv 里面的 `MUXDEF` 宏，最后会展开成类似 `riscv32_CPU_state` 的形式。
 
 !!! question "eip 寄存器去了哪里"
     我们知道在 x86 架构中，存在一个 `eip` 寄存器，就是起到 PC 的作用，但是为什么 `x86_CPU_state` 这个结构体中不去声明 `eip` ，而是在结构体中声明一个 `pc` 呢？
@@ -184,7 +184,7 @@ typedef struct {
 extern NEMUState nemu_state;
 ```
 
-这里可以看到对 `NEMUState` 结构体的声明，其中有三个成员变量。第一个是一个整数 `state` ，会用来存储上面的枚举类型中的一个，用来代表当前 nemu 的状态（比如 `NEMU_RUNNING` 表示正在执行用户程序， `NEMU_STOP` 表示程序暂停执行等），用来控制 nemu 的行为。第二个是虚拟地址类型的 `halt_pc` ，其中会存储 nemu 在停止执行用户程序时所在的 PC 值（这个变量目前还用不到，在 PA2 中会详细展开）。第三个是一个无符号整数 `halt_ret` ，这个表示 nemu 的用户程序的返回值（我们都知道， `main()` 函数返回非零值时表示异常退出）。
+这里可以看到对 `NEMUState` 结构体的声明，其中有三个成员变量。第一个是一个整数 `state` ，会用来存储上面的枚举类型中的一个，**用来代表当前 nemu 的状态**（比如 `NEMU_RUNNING` 表示正在执行用户程序， `NEMU_STOP` 表示程序暂停执行等），用来控制 nemu 的行为。第二个是虚拟地址类型的 `halt_pc` ，**其中会存储 nemu 在停止执行用户程序时所在的 PC 值**（这个变量目前还用不到，在 PA2 中会详细展开）。第三个是一个无符号整数 `halt_ret` ，这个**表示 nemu 的用户程序的返回值**（我们都知道， `main()` 函数返回非零值时表示异常退出）。
 
 在这里干讲你肯定不好理解，我们来寻找一个实例。
 
@@ -204,7 +204,7 @@ int is_exit_status_bad() {
 
 后面还跟着一个 `is_exit_status_bad()` 函数，这个函数的作用从名字就可以知道，是判断退出状态是否异常。
 
-但这个“异常”是指用户程序异常退出还是指 nemu 自身异常退出？
+但这个“异常”是指用户程序异常退出还是指 nemu 自身异常退出呢？（我们前面提到过， nemu 是装载着用户程序的一个模拟器，那么用户程序的异常退出和 nemu 的异常退出显然是两个不同的概念）
 
 这又体现了良好的配置的重要性，如果你的编辑器拥有函数跳转功能，你立刻就可以跳转到其被调用的地方（ `src/nemu-main.c` ），从而检查这一点。
 
@@ -254,7 +254,7 @@ static void exec_once(Decode *s, vaddr_t pc) {
 
 这里把一个 `Decode` 结构体指针 `s` 的各个参数初始化成地址 `pc` ，然后 `s` 带着装入的值，进入到具体的 ISA 指令集中去执行指令了。执行完后， `cpu.pc` 被更新。
 
-所以， `Decode` 结构体实际上就是一个对执行程序的抽象，它包含了执行一条机器指令所需的最小程度的信息。它在 nemu 中被填写好，然后交给具体的 ISA 指令集去执行，从而实现了 nemu 和 ISA 之间的解耦。这使得 nemu 只需准备必须的信息，而无需知道它装载的具体是什么样的指令集，我们将会在 PA2 和这个结构体打很多交道。
+所以， **`Decode` 结构体实际上就是一个对程序执行的抽象，它包含了执行一条机器指令所需的最小程度的信息**。它在 nemu 中被填写好，然后交给具体的 ISA 指令集去执行，从而实现了 nemu 和 ISA 之间的解耦。这使得 nemu 只需准备必须的信息，而无需知道它装载的具体是什么样的指令集，我们将会在 PA2 和这个结构体打很多交道。
 
 ## gdb 式的框架
 
@@ -262,7 +262,7 @@ static void exec_once(Decode *s, vaddr_t pc) {
 
 前面我们介绍过， gdb 可以视作一个状态机的管理器，我们可以将它简化为以下逻辑：
 
-```plaintext
+```c
 while(1){
   设置状态;
   执行一步用户程序的指令;
@@ -270,7 +270,7 @@ while(1){
 }
 ```
 
-说白了， gdb 就是一个执行程序的程序， nemu 里 sdb 的原理就是这样。
+所以说白了， gdb 就是一个**用来执行程序的程序**， nemu 里 sdb 的原理也是这样。
 
 阅读完“RTFSC”一节之后你应该已经知道，在 nemu 中输入 `c` 就可以执行用户程序，我们来到 `src/monitor/sdb/sdb.c` 中，看看 `c` 命令的实现。
 
@@ -284,7 +284,7 @@ static int cmd_c(char *args) {
 这个实现很简洁，就是调用 `cpu_exec()` 函数，然后返回，那显然， `cpu_exec()` 函数就是代表执行用户程序。
 
 !!! question "为什么要用 -1 作为参数？"
-    `cpu_exec()` 里面的参数是一个数，那理论上应该就是输入几个指令，然后执行多少指令，但为什么要用 -1 作为参数呢？
+    `cpu_exec()` 里面的参数是一个数，那理论上这个函数的功能应该就是输入指令的个数，然后就根据这个数来对应执行多少条指令，但 `cmd_c()` 这里为什么要用 -1 作为参数呢？
 
 !!! tip "看看函数定义"
     去源码里寻找一下， `cpu_exec()` 这个函数的原始定义是什么样的，结合你在《计算机系统基础》（《计算机组织结构》）课上学过的数据编码相关的知识，你应该就能理解了。
