--- a/_smewin/docs/cs/ics_riscv/PA/PA1_4.md
+++ b/_smewin/docs/cs/ics_riscv/PA/PA1_4.md
@@ -103,11 +103,11 @@ clean:
 
 ## 从表达式求值中看编译的流程
 
-从我们上面的讲解可以看出，编译的本质其实就是把一个字符串变成另一个字符串，两个字符串表达的是一样的信息，只是以不同的形式面向不同的对象。（那我这个写文档的何尝不也是一种编译器）
+从我们上面的讲解可以看出，**编译的本质其实就是把一个字符串变成另一个字符串，两个字符串表达的是一样的信息，只是以不同的形式面向不同的对象。**（那我这个写文档的何尝不也是一种编译器）
 
 ### 词法分析
 
-我们上面所说的“字符串”，若要表达一定的信息，那它肯定不能随意书写（随意到像离散里学的笛卡尔积一样）。只有**符合某种规则**的字符串，才能表达我们想要的意思。
+我们上面所说的“字符串”，若要表达一定的信息，那它肯定不能随意书写（随意到像离散里学的笛卡尔积一样）。只有**符合某种规则**的字符串，才能按照一定规律来书写并理解，从而表达我们想要的意思。
 
 !!! question "我看到文档上都在说什么词素什么 token ，这都是什么东西？"
     不要紧张，术语是很难懂，但这不重要，跟着我慢慢来，了解原理才是重点。
@@ -145,7 +145,7 @@ This is a big apple.
 好了，我们通过前面的词法分析和语法分析两步，已经确保这个句子是一个符合英语规则的句子，接下来就可以分析其含义，进入语义分析了。这个句子的含义显然，我们就不分析了。
 
 !!! info "语法语义一轮完成"
-    在很多情况下，语义分析会在语法分析的同时直接完成，因为语法分析的过程会建立句子的语法结构，可以直接根据逐步生成的语法结构去理解语义。因为语义分析过程中不会出现报错，所以如果在这个过程中出现错误，一定是语法分析没通过，那直接丢弃已经进行了的语义分析结果即可。 PA 中的表达式求值就是一个语法语义一轮完成的过程（不断寻找主运算符的过程，同时也在进行递归计算）。
+    在很多情况下，语义分析会在语法分析的同时直接完成，因为语法分析的过程会建立句子的语法结构，此时就可以直接根据逐步生成的语法结构去顺带理解语义。因为语义分析过程中不会出现报错，所以如果在这个过程中出现错误，一定是语法分析没通过，那直接丢弃已经进行了的语义分析结果即可。 PA 中的表达式求值就是一个语法语义一轮完成的过程（不断寻找主运算符的过程，同时也在进行递归计算）。
 
 
 ## 软件测试及 AI 脚本的力量
@@ -174,18 +174,23 @@ This is a big apple.
 
     我们使用程序是因为它能比人类高效快速得多地解决一个问题，设计程序的过程就是一个投资过程，投资存在风险（程序写错了/花费了时间精力），但当你积累了足够多的成功经验后，你就能够依据过去的经验来行动，稳稳地获得收获。
 
-    我们都知道，学校里有许许多多的通修程序设计课，但鲜有人最终在通修程序设计中得到其精髓，而只是得其皮毛，混了个分数。
+    我们都知道，学校里有许许多多的通修程序设计课，但鲜有人最终在通修程序设计中得到其精髓，而多只是得其皮毛，混了个分数。
 
     程序设计的强大之处在于：它能将结构性的操作自动化，让我们从繁琐的重复性工作中解放出来，让我们专注于更有价值的工作。
 
-    比如，处理 excel 表格等结构化数据，就可以使用程序来自动化处理，节省大量的时间。当别人在苦苦地一点点复制粘贴时，你只需要跟 AI 说一句话得到一个程序<del>，就能跟领导假装说这个问题任务量很大要搞几个小时，然后获得大量的时间摸鱼</del>。
+    比如，处理 excel 表格等结构化数据，就可以使用程序来自动化处理，节省大量的时间。当别人在苦苦地一点点复制粘贴时，你只需要跟 AI 说一句话得到一个程序<del>，就能跟领导假装说这个问题任务量很大要搞几个小时，然后运行一下程序两秒钟就把任务搞定，然后获得大量的时间摸鱼</del>。
 
 
 ## 表达式求值测试在 unsigned 的缺陷
 
 如果你已经尝试使用了我们提供的参考实现，并且找出了一些表达式求值的 bug ，那么能帮到你我感到很开心，但是再往后你就会发现一些问题：即使你的表达式求值已经通过了 OJ 上的所有测试，但是对于有些输入，总是会在测试程序里显示错误。
 
-这是因为我们在表达式求值的过程中，全部都在用 unsigned 类型运算，而参考实现中的 python 程序，包括 C 语言中在进行相应数的表达式求值时，会默认将这些常量按照 int 类型处理，导致一旦出现负数乘除法之类的情况，最后得到的结果可能是和 unsigned 运算不同的。
+这是因为我们在表达式求值的过程中，全部都在用 unsigned 类型运算，而参考实现中的 python 程序，包括 C 语言中在进行相应数的表达式求值时，会默认将这些常量按照 int 类型处理，导致一旦出现负数运算的情况，最后得到的结果可能是和 unsigned 运算不同的。
+
+!!! question "哪些运算的结果会有不同？"
+    你可以思考一下，哪些运算可能导致 int 和 unsigned 两种解释下的运算结果不同。
+
+    想解决这个问题，显然要运用《计算机系统基础》课程中的机器级表示的内容，需要你深入理解整数运算的行为。如果你这个问题都能完全理解，说明你对这部分知识的掌握已经十分扎实，期末考试这部分的内容想必对你来说已经是小菜一碟了。
 
 C 语言对值的默认处理应该会让你回想起《计算机系统基础》课上的这张 PPT 。
 
